--- a/stylesheet.css
+++ b/stylesheet.css
@@ -523,8 +523,13 @@ footer {
 
 .story-p2 {
   text-align:center;
-  padding-bottom: 100px;
+  padding: 10px 300px 100px 300px;
 }
+
+.story-p2  p{
+ text-align: left;
+}
+
 
 .story-pic3 {
   background-color: aqua;
@@ -548,17 +553,21 @@ footer {
   padding: 30px;
 }
 
-/* .story-p3 {
-} */
+.last-story {
+  text-align: center;
+}
 
 .story-title4 {
   text-align: center;
   font-size: 35px;
   padding-bottom: 30px;
 }
+  
+
 
 .story-p4 {
-  text-align: center;
+  text-align: left;
+  padding: 20px 310px 0 310px;
 }
 
 .finish {
